--- a/src/app/pages/sensor/sensor-list/sensor-list.component.html
+++ b/src/app/pages/sensor/sensor-list/sensor-list.component.html
@@ -19,6 +19,6 @@
 
 <ion-fab slot="fixed" vertical="bottom" horizontal="end">
   <ion-fab-button>
-    <ion-icon name="add"></ion-icon>
+    <ion-icon name="add" (click)="addSensor()"></ion-icon>
   </ion-fab-button>
 </ion-fab>
