--- a/src/app/pages/sensor/sensor-list/sensor-list.component.html
+++ b/src/app/pages/sensor/sensor-list/sensor-list.component.html
@@ -8,11 +8,13 @@
   <h1>Configured sensors</h1>
   <ion-list>
     <ion-item *ngFor="let sensor of sensorList; let i = index">
-      <ion-label>
+      <ion-label class="ion-activatable ripple-parent rectangle">
         <h1>{{ sensor.friendlyName }} </h1>
         <h2>{{ sensorTypes[sensor.type] | titlecase }}</h2>
-        <p>id: {{ sensor.id }} - {{ sensor.haSensorId }}</p>
+        <p>id: {{ sensor.id }} - {{ sensor.haSensorId }}</p>   
+        <ion-ripple-effect></ion-ripple-effect>
       </ion-label>
+      <ion-icon name="trash" slot="end" (click)="deleteClick(sensor)" class="icon"></ion-icon>
     </ion-item>
   </ion-list>
 </ion-content>
