Adding automations screen
- List automations
- option to grade automation
- Change name to match addon

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,7 +5,7 @@
 
         <ion-list id="inbox-list">
 
-          <ion-list-header>Automated Automation's</ion-list-header>
+          <ion-list-header>Smart Thermostat</ion-list-header>
           <ion-note>An HomeAssistant AI</ion-note>
 
           <ion-menu-toggle auto-hide="false" *ngFor="let p of appPages; let i = index">
