--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,6 +1,5 @@
 <ion-content class="ion-padding">
-  <h1>Welcome to AA</h1>
-  <p>Select Sensors option in the menu to continue</p>
+  <h1>Welcome to Smart Thermostat</h1>
   <p>
     Lorem ipsum dolor sit amet, consectetur adipiscing elit.<br/>
     Donec convallis ut elit non porttitor. Curabitur nec leo a mauris molestie varius sed eget est.<br/>
