--- a/src/app/pages/automation/automation-list/automation-list.component.html
+++ b/src/app/pages/automation/automation-list/automation-list.component.html
@@ -14,7 +14,7 @@
         <br/>
         <ion-button 
           class="button"
-          *ngIf="automation.status == 0"  
+          *ngIf="automation.status === 0"  
           size="large"
           (click)="updateStatus(automation)">
           Grade automation
