--- a/src/app/pages/sensor/sensor-list/sensor-list.component.html
+++ b/src/app/pages/sensor/sensor-list/sensor-list.component.html
@@ -11,11 +11,12 @@
       <ion-label class="ion-activatable ripple-parent rectangle">
         <h1>{{ sensor.friendlyName }} </h1>
         <h2>{{ sensorTypes[sensor.type] | titlecase }}</h2>
-        <p>id: {{ sensor.id }} - {{ sensor.haSensorId }}</p>   
+        <p>id: {{ sensor.id }} - {{ sensor.haSensorId }}</p>
         <ion-ripple-effect></ion-ripple-effect>
       </ion-label>
       <ion-icon name="trash" slot="end" (click)="deleteClick(sensor)" class="icon"></ion-icon>
     </ion-item>
+    <ion-item *ngIf="sensorList.length === 0">No sensor Configured</ion-item>
   </ion-list>
 </ion-content>
 
