Adding logo to menu

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,15 +1,34 @@
+<ion-header>
+  <ion-toolbar>
+    <ion-title> Home </ion-title>
+  </ion-toolbar>
+</ion-header>
+
 <ion-content class="ion-padding">
   <h1>Welcome to Smart Thermostat</h1>
-  <p>
-    Lorem ipsum dolor sit amet, consectetur adipiscing elit.<br/>
-    Donec convallis ut elit non porttitor. Curabitur nec leo a mauris molestie varius sed eget est.<br/>
-    Curabitur in sem sit amet diam porta luctus. Pellentesque ligula purus, viverra non pulvinar eu, elementum quis
-    justo.<br/>
-    Suspendisse quis tortor finibus velit pharetra porta. Phasellus ut mauris eget nibh posuere varius.<br/>
-    Nullam tristique est ut ligula elementum, feugiat gravida orci mattis. Nunc eu sem vitae nunc lacinia rhoncus.<br/>
-    Nam vel quam et quam sollicitudin suscipit. Praesent consequat justo nec lacus hendrerit euismod.<br/>
-    Sed augue dolor, egestas sagittis ultricies id, scelerisque id enim. Nunc tempus aliquam velit sed venenatis.<br/>
-    Fusce vel eros aliquam, pretium neque quis, auctor ligula. Fusce tempus sem vel odio ultricies accumsan ut ac nisi.<br/>
-    In hac habitasse platea dictumst. Proin aliquam turpis vel aliquam imperdiet.
-  </p>
+
+  <ion-card color="tertiary">
+    <ion-card-content>
+      Introducing our cutting-edge home assistant add-on that will revolutionize the way you control your smart
+      thermostat. <br />
+      Powered by advanced artificial intelligence, <br />
+      this innovative solution seamlessly integrates with your existing smart home system, <br />
+      providing you with unparalleled convenience and comfort.
+    </ion-card-content>
+  </ion-card>
+
+  <ion-card>
+    <ion-card-header>
+      <ion-card-title>How does it work?</ion-card-title>
+    </ion-card-header>
+    <ion-card-content>
+      Start by adding sensors and assigning a type.<br />
+      After this the system will automatically start learning your habits and preferences<br />
+      and it will create automation('s) bases on these.<br />
+      <br />
+      After the automation's are created you need to grade them and the system will<br />
+      add the accepted automation('s) to Home Assistant.<br />
+    </ion-card-content>
+  </ion-card>
+  
 </ion-content>
