--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,12 +2,12 @@
   <ion-split-pane contentId="main-content">
     <ion-menu contentId="main-content" type="overlay">
       <ion-content>
-
+        <div class="logo-container">
+          <img class="logo" src="/assets/logo.jpg" alt="logo">
+        </div>
         <ion-list id="inbox-list">
-
           <ion-list-header>Smart Thermostat</ion-list-header>
           <ion-note>An HomeAssistant AI</ion-note>
-
           <ion-menu-toggle auto-hide="false" *ngFor="let p of appPages; let i = index">
             <ion-item routerDirection="root" [routerLink]="[p.url]" lines="none" detail="false"
               routerLinkActive="selected" [routerLinkActiveOptions]="{exact:true}">
@@ -16,11 +16,8 @@
             </ion-item>
           </ion-menu-toggle>
         </ion-list>
-
       </ion-content>
-
     </ion-menu>
-
     <ion-router-outlet id="main-content"></ion-router-outlet>
   </ion-split-pane>
 </ion-app>
