--- a/src/app/pages/automation/automation-list/automation-list.component.html
+++ b/src/app/pages/automation/automation-list/automation-list.component.html
@@ -5,7 +5,7 @@
 </ion-header>
 
 <ion-content class="ion-padding">
-  <h1>New sensors</h1>
+  <h1>New automation's</h1>
   <ion-list>
     <ion-item *ngFor="let automation of automationList; let i = index">
       <ion-label class="ion-activatable ripple-parent rectangle">
@@ -23,6 +23,7 @@
         <ion-ripple-effect></ion-ripple-effect>
       </ion-label>
     </ion-item>
+    <ion-item *ngIf="automationList.length === 0">No automation's generated</ion-item>
   </ion-list>
 </ion-content>
 
