Fix front-end testing
- Set testing to ChromeHeadless
- Make components not standalone
- Fix reload from adding sensor

--- a/src/app/pages/sensor/sensor-list/sensor-list.component.html
+++ b/src/app/pages/sensor/sensor-list/sensor-list.component.html
@@ -21,7 +21,7 @@
 </ion-content>
 
 <ion-fab slot="fixed" vertical="bottom" horizontal="end">
-  <ion-fab-button>
-    <ion-icon name="add" (click)="addSensor()"></ion-icon>
+  <ion-fab-button (click)="addSensor()">
+    <ion-icon name="add" ></ion-icon>
   </ion-fab-button>
 </ion-fab>
