--- a/src/app/pages/sensor/sensor-add/sensor-add.component.html
+++ b/src/app/pages/sensor/sensor-add/sensor-add.component.html
@@ -3,7 +3,7 @@
     <ion-buttons slot="start">
       <ion-back-button></ion-back-button>
     </ion-buttons>
-    <ion-title> Add sensors </ion-title>
+    <ion-title>Add sensors</ion-title>
   </ion-toolbar>
 </ion-header>
 
@@ -19,6 +19,7 @@
         <ion-ripple-effect></ion-ripple-effect>
       </ion-label>
     </ion-item>
+    <ion-item *ngIf="results.length === 0">No sensor found</ion-item>
   </ion-list>
 
 </ion-content>
