--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -26,8 +26,10 @@
       After this the system will automatically start learning your habits and preferences<br />
       and it will create automation('s) bases on these.<br />
       <br />
-      After the automation's are created you need to grade them and the system will<br />
-      add the accepted automation('s) to Home Assistant.<br />
+      After the automation's are created you need to grade them.<br />
+      This will train the AI further to create better automation next time.<br />
+      <br />
+      You can copy the automation and past it into the desired yaml file.
     </ion-card-content>
   </ion-card>
   
